src/test/deca/context/invalid/personalTests/testField.deca
class A{
    int a = 0;
}

class B extends A{
    int b = 0;

    void a(){
        println("a");
    }
}

{
   A a = new A();
   B b = new B();
}